hard-gists/771426542eb36afeb56ce8b163560a4c/run.log
=== Docker Run Log for 771426542eb36afeb56ce8b163560a4c ===
Started at: Mi 29. Okt 17:17:03 CET 2025

[2025-10-29 17:17:03] START: Running container for 771426542eb36afeb56ce8b163560a4c
[2025-10-29 17:17:03] SUCCESS: Container c2a477d12a924ba33937ef82045fecb5873629ebc5352af96cd6d1cbcc73463d started for 771426542eb36afeb56ce8b163560a4c
=== Container logs for 771426542eb36afeb56ce8b163560a4c ===
  File "/snippet.py", line 296
    print 'Saving predictions'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 771426542eb36afeb56ce8b163560a4c ===
[2025-10-29 17:17:05] INFO: Container c2a477d12a924ba33937ef82045fecb5873629ebc5352af96cd6d1cbcc73463d has stopped
